webpack, addTask, status, filter

--- a/public/index.html
+++ b/public/index.html
@@ -19,9 +19,9 @@
                 </form>
                 <div class="filter">
                     <select class="filter__select">
-                      <option value="all">Toutes les tâches</option>
-                      <option value="completed">Tâches terminées</option>
-                      <option value="pending">Tâches en cours</option>
+                        <option value="all">Toutes les tâches</option>
+                        <option value="completed">Tâches terminées</option>
+                        <option value="onGoing">Tâches en cours</option>
                     </select>
                 </div>            
                 <ul class="add-task__list">
@@ -29,6 +29,6 @@
             </div>
         </div>
 
-        <script src="/dist/index.js"></script>
+        <script src="/dist/bundle.js"></script>
     </body>
 </html>
