filter by research

--- a/public/index.html
+++ b/public/index.html
@@ -15,11 +15,15 @@
                 <h1 class="title">Todo List</h1>
             </header>
             <main>
-                <div class="add-task">
-                    <form class="add-task__form">
-                        <input type="text" class="add-task__input" placeholder="Ajouter une nouvelle tâche">
-                        <button type="submit" class="add-task__button">Ajouter</button>
+                <div class="task">
+                    <form class="task__form">
+                        <input type="text" class="task__form__input" placeholder="Ajouter une nouvelle tâche">
+                        <button type="submit" class="task__form__button">Ajouter</button>
                     </form>
+                    <div class="search-task">
+                        <input class="search-task__input" type="text" placeholder="Rechercher une tâche" />
+                        <button class="search-task__button">Vider</button>
+                    </div>
                     <div class="filter">
                         <select class="filter__select">
                             <option value="all">Toutes les tâches</option>
@@ -27,7 +31,7 @@
                             <option value="onGoing">Tâches en cours</option>
                         </select>
                     </div>            
-                    <ul class="add-task__list">
+                    <ul class="task__list">
                     </ul>
                 </div>
             </main>
